--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
@@ -30,8 +32,10 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
+    "sass": "^1.71.1",
     "typescript": "^4.5.5",
-    "vite": "^2.9.12"
+    "vite": "^2.9.12",
+    "xml-js": "^1.6.11"
   },
   "pre-commit": "lint",
   "license": "MIT"
