--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "leaflet": "^1.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
@@ -34,8 +35,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.71.1",
     "typescript": "^4.5.5",
-    "vite": "^2.9.12",
-    "xml-js": "^1.6.11"
+    "vite": "^2.9.12"
   },
   "pre-commit": "lint",
   "license": "MIT"
