--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "fast-xml-parser": "^4.3.5",
     "leaflet": "^1.9.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^4.2.1",
-    "xml-js": "^1.6.11"
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
